Created stream to server video

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <script>
     document.addEventListener("DOMContentLoaded", () => {
       var player
-      var src = './videos/file_example_AVI_1280_1_5MG.m3u8'
+      var src = 'https://ultra-shops-newport-individually.trycloudflare.com/video/play/file_example_AVI_1280_1_5MG.m3u8'
       const video = document.querySelector('video')
       const deafultOptions = {}
       if (Hls.isSupported()) {
